--- a/Webstack-Portfolio-Project/src/index.css
+++ b/Webstack-Portfolio-Project/src/index.css
@@ -1,4 +1,4 @@
-/* start global css */
+/* Reset and Base Styles */
 *, *::before, *::after {
   -webkit-box-sizing: border-box;
   -moz-box-sizing: border-box;
@@ -9,4 +9,3 @@
   margin: 0;
   padding: 0;
 }
-/* end global css */
