--- a/Webstack-Portfolio-Project/src/App.css
+++ b/Webstack-Portfolio-Project/src/App.css
@@ -1,4 +1,4 @@
-/* start Global Styles */
+/* Start Global Components Styles */
 .section {
   padding: 60px 40px;
   min-height: 100vh;
@@ -82,170 +82,4 @@
     font-size: 2.5rem; 
   }
 }
-/* end Global Styles */
-
-/* start NavBar css */
-.navBar {
-  background-image: linear-gradient(rgba(4,9,30,0.7),rgba(4,9,30,0.7)),url('./assets/image.jpg');
-}
-
-.navBar .navbar-brand,
-.navBar .offcanvas-title {
-  color: white !important;
-}
-.navBar .navbar-brand {
-  font-family: 'Pacifico', cursive;
-}
-.navBar .navbar-brand span {
-  color: #007bff;
-}
-
-.navBar .nav-link {
-  cursor: pointer;
-  text-decoration: none;
-  color: white !important;
-}
-
-.navBar .nav-link:hover {
-  color: #007bff !important; 
-}
-
-.navBar .offcanvas-body .nav-link {
-  color: white !important;
-}
-
-.navBar .navbar-toggler-icon {
-  background-image: url("data:image/svg+xml;charset=utf8,%3Csvg viewBox='0 0 30 30' xmlns='http://www.w3.org/2000/svg'%3E%3Cpath stroke='rgba%28255, 255, 255, 1%29' stroke-width='2' stroke-linecap='round' stroke-miterlimit='10' d='M4 7h22M4 15h22M4 23h22'/%3E%3C/svg%3E") !important;
-}
-/* end NavBar css */
-
-/* start Home css */
-.home {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  padding-top: 60px;
-  color: #fff;
-  min-height: 100vh;
-  width: 100%;
-  background-image: linear-gradient(rgba(4,9,30,0.7),rgba(4,9,30,0.7)),url('/assets/image.jpg');
-  background-position: center;
-  background-size: cover;
-  background-repeat: no-repeat;
-}
-
-.home .text-box {
-  display: flex;
-  justify-content: center;
-  flex-direction: column;
-  align-items: center;
-  text-align: center;
-}
-/* end Home css */
-
-/* start About css */
-.about .container {
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
-  height: 100vh;
-}
-
-@media (max-width: 768px) {
-  .about .container {
-    flex-direction: column;
-    justify-content: center;
-  }
-  .about h2 {
-    display: none;
-  }
-  .about .content {
-    width: 100%;
-  }
-  .personal-image {
-    width: 100% !important;
-    margin-bottom: 30px;
-  }
-  .about .content {
-    text-align: center;
-    width: 100% !important;
-  }
-
-}
-
-.about .content {
-  width: 67%;
-}
-
-.about h2 {
-  text-align: left;
-}
-
-.personal-image {
-  width: 27%;
-  border-radius: 10px;
-}
-/* end About css */
-
-/* Start Skills CSS */
-.skills {
-  background-color: #f4f4f4;
-}
-/* end Skills css */
-
-/* start Projects css */
-.projects .card-box {
-  background-color: #f4f4f4;
-}
-
-.projects .card-box .btn {
-  opacity: 0.7;
-  padding: 4px 8px;
-  margin-top: 20px;
-  font-size: small;
-}
-.projects .card-box .btn:hover {
-  opacity: 1;
-}
-/* end Projects css */
-
-/* start Contact css */
-.contact {
-  background-color: #F4F4F4;
-  min-height: 80vh;
-}
-.contact .contact-info {
-  display: flex;
-  justify-content: space-around;
-  align-items: center;
-  flex-direction: row-reverse;
-}
-@media screen and (max-width: 768px) {
-  .contact .contact-info {
-    flex-direction: column;
-  }
-  .contact .contact-info iframe {
-    margin-bottom: 30px;
-    width: 100%;
-  }
-  
-}
-/* end Contact css */
-
-/*start footer css */
-.footer {
-  background-color: #333;
-  color: #fff;
-  padding: 20px 0;
-}
-.footer p {
-  margin: 0;
-  text-align: center;
-  font-size: large;
-}
-@media (max-width: 768px) {
-  .footer p {
-    font-size: small;
-  }
-}
-/*end footer css */
+/* End Global Components Styles */
