--- a/Webstack-Portfolio-Project/src/App.css
+++ b/Webstack-Portfolio-Project/src/App.css
@@ -35,6 +35,7 @@
   margin-bottom: 30px;
 }
 
+/* Styles for card layout and hover effects */
 .card-container {
   display: flex;
   flex-wrap: wrap;
@@ -63,16 +64,23 @@
   font-size: 1.5rem;
 }
 
+/* Additional styles for card content */
 .card-box p {
   margin-bottom: 0;
   color: #666; 
 }
+
+/*
+  Media queries for responsive design 
+  Adjust width for tablets and small screens
+*/
 @media (max-width: 768px) {
   .card-box {
-    width: calc(50% - 20px); 
+    width: calc(50% - 20px); /*  */
   }
 }
 
+/* Adjust width for mobile screens */
 @media (max-width: 480px) {
   .card-box {
     width: 100%; 
